# QuantumSecureDNA

./: .replit  LICENSE  README.md  app.py  app_flask.py  app_phishing.py  phishing_detection.py  pyproject.toml  qiskit_test.py  security_alert_detector.py  test_phishing_api.py  test_web_apis.py  test_web_scraper.py  web_scraper.py
attached_assets/: Pasted-Skip-to-content-Am-implementat-dashboard-ul-centralizat-de-administrare-care-leag-toate-componente-1745541767917.txt
instance/: quantum_edu.db  quantum_edu.db-journal
pages/: dna_security.py  quantum_algorithms.py  quantum_basics.py  quantum_ml.py  resources.py
static/css/: main.css
static/js/: breach-detector.js  quantum_visuals.js  security.js  web_scraper.js
templates/: admin.html  dna_security.html  index.html  login.html  phishing_index.html  quantum_algorithms.html  quantum_basics.html  quantum_ml.html  register.html  resources.html
utils/: copyright.py  database.py  dna_security.py  qml_utils.py  quantum_utils.py
