[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pylatexenc>=2.10",
    "qiskit>=2.0.0",
    "scikit-learn>=1.6.1",
    "streamlit>=1.44.1",
]
