[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pylatexenc>=2.10",
    "qiskit-aer>=0.17.0",
    "qiskit>=2.0.0",
    "scikit-learn>=1.6.1",
    "streamlit>=1.44.1",
    "flask-cors>=5.0.1",
    "flask-sqlalchemy>=3.1.1",
    "pytest>=8.3.5",
    "flask>=3.1.0",
    "psycopg2-binary>=2.9.10",
    "flask-jwt-extended>=4.7.1",
    "sqlalchemy>=2.0.40",
    "trafilatura>=2.0.0",
]
